--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,101 +14,110 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header class="header">
-      <div class="container header__inner">
+  <body class="d-flex flex-column min-vh-100">
+    <header class="py-3 border-bottom">
+      <div class="container d-flex justify-content-center">
         <a href="https://leakix.net">
-          <img
-            src="images/logo.png"
-            alt="LeakIX"
-            class="header__logo"
-            width="96"
-            height="40"
-          />
+          <img src="images/logo.png" alt="LeakIX" width="96" height="40" />
         </a>
       </div>
     </header>
 
-    <main class="main">
+    <main class="flex-grow-1 py-5">
       <div class="container">
-        <div class="page-title">
-          <h1>Sponsor LeakIX</h1>
-          <p>Support the project with cryptocurrency</p>
+        <div class="text-center mb-4">
+          <h1 class="text-warning">Sponsor LeakIX</h1>
+          <p class="text-secondary">Support the project with cryptocurrency</p>
         </div>
 
-        <div class="crypto-list">
-          <div class="crypto-card">
-            <div class="crypto-card__header">
-              <span class="crypto-card__name">Bitcoin</span>
-              <span class="crypto-card__symbol">BTC</span>
+        <div class="d-flex flex-column gap-3">
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <span class="fw-semibold">Bitcoin</span>
+              <span class="text-secondary ms-auto small">BTC</span>
             </div>
-            <div class="crypto-card__body">
-              <code class="crypto-card__address">
+            <div class="card-body d-flex gap-2 flex-column flex-md-row">
+              <code class="crypto-address flex-grow-1">
                 bc1qxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
               </code>
-              <button class="crypto-card__copy" data-copy>Copy</button>
+              <button class="btn btn-warning fw-semibold" data-copy>
+                Copy
+              </button>
             </div>
           </div>
 
-          <div class="crypto-card">
-            <div class="crypto-card__header">
-              <span class="crypto-card__name">Ethereum</span>
-              <span class="crypto-card__symbol">ETH</span>
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <span class="fw-semibold">Ethereum</span>
+              <span class="text-secondary ms-auto small">ETH</span>
             </div>
-            <div class="crypto-card__body">
-              <code class="crypto-card__address">
+            <div class="card-body d-flex gap-2 flex-column flex-md-row">
+              <code class="crypto-address flex-grow-1">
                 0xXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
               </code>
-              <button class="crypto-card__copy" data-copy>Copy</button>
+              <button class="btn btn-warning fw-semibold" data-copy>
+                Copy
+              </button>
             </div>
           </div>
 
-          <div class="crypto-card">
-            <div class="crypto-card__header">
-              <span class="crypto-card__name">Zcash</span>
-              <span class="crypto-card__symbol">ZEC</span>
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <span class="fw-semibold">Zcash</span>
+              <span class="text-secondary ms-auto small">ZEC</span>
             </div>
-            <div class="crypto-card__body">
-              <code class="crypto-card__address">
+            <div class="card-body d-flex gap-2 flex-column flex-md-row">
+              <code class="crypto-address flex-grow-1">
                 zs1xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
               </code>
-              <button class="crypto-card__copy" data-copy>Copy</button>
+              <button class="btn btn-warning fw-semibold" data-copy>
+                Copy
+              </button>
             </div>
           </div>
 
-          <div class="crypto-card">
-            <div class="crypto-card__header">
-              <span class="crypto-card__name">Monero</span>
-              <span class="crypto-card__symbol">XMR</span>
+          <div class="card">
+            <div class="card-header d-flex align-items-center">
+              <span class="fw-semibold">Monero</span>
+              <span class="text-secondary ms-auto small">XMR</span>
             </div>
-            <div class="crypto-card__body">
-              <code class="crypto-card__address">
+            <div class="card-body d-flex gap-2 flex-column flex-md-row">
+              <code class="crypto-address flex-grow-1">
                 4XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
               </code>
-              <button class="crypto-card__copy" data-copy>Copy</button>
+              <button class="btn btn-warning fw-semibold" data-copy>
+                Copy
+              </button>
             </div>
           </div>
         </div>
       </div>
     </main>
 
-    <footer class="footer">
+    <footer class="py-3 border-top text-center">
       <div class="container">
-        <div class="footer__links">
-          <a href="https://leakix.net" class="footer__link">Website</a>
-          <a href="https://twitter.com/leak_ix" class="footer__link">Twitter</a>
-          <a href="https://linkedin.com/company/leakix" class="footer__link">
+        <div class="d-flex justify-content-center gap-3 flex-wrap mb-2">
+          <a href="https://leakix.net" class="link-warning">Website</a>
+          <a href="https://twitter.com/leak_ix" class="link-warning">Twitter</a>
+          <a href="https://linkedin.com/company/leakix" class="link-warning">
             LinkedIn
           </a>
-          <a href="https://github.com/LeakIX" class="footer__link">GitHub</a>
-          <a href="mailto:sales@leakix.net" class="footer__link">Email</a>
+          <a href="https://github.com/LeakIX" class="link-warning">GitHub</a>
+          <a href="mailto:sales@leakix.net" class="link-warning">Email</a>
         </div>
-        <p class="footer__text">LeakIX - Security Research Platform</p>
+        <p class="text-secondary small mb-0">
+          LeakIX - Security Research Platform
+        </p>
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.querySelectorAll("[data-copy]").forEach((btn) => {
         btn.addEventListener("click", () => {
