--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
@@ -102,14 +106,34 @@
 
     <footer class="py-3 border-top text-center">
       <div class="container">
-        <div class="d-flex justify-content-center gap-3 flex-wrap mb-2">
-          <a href="https://leakix.net" class="link-warning">Website</a>
-          <a href="https://twitter.com/leak_ix" class="link-warning">Twitter</a>
-          <a href="https://linkedin.com/company/leakix" class="link-warning">
-            LinkedIn
+        <div class="d-flex justify-content-center gap-4 flex-wrap mb-2 fs-4">
+          <a href="https://leakix.net" class="link-warning" title="Website">
+            <i class="bi bi-globe"></i>
           </a>
-          <a href="https://github.com/LeakIX" class="link-warning">GitHub</a>
-          <a href="mailto:sales@leakix.net" class="link-warning">Email</a>
+          <a
+            href="https://twitter.com/leak_ix"
+            class="link-warning"
+            title="Twitter"
+          >
+            <i class="bi bi-twitter-x"></i>
+          </a>
+          <a
+            href="https://linkedin.com/company/leakix"
+            class="link-warning"
+            title="LinkedIn"
+          >
+            <i class="bi bi-linkedin"></i>
+          </a>
+          <a
+            href="https://github.com/LeakIX"
+            class="link-warning"
+            title="GitHub"
+          >
+            <i class="bi bi-github"></i>
+          </a>
+          <a href="mailto:sales@leakix.net" class="link-warning" title="Email">
+            <i class="bi bi-envelope"></i>
+          </a>
         </div>
         <p class="text-secondary small mb-0">
           LeakIX - Security Research Platform
