Add LeakIX description section
Closes #4

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,23 @@
           <p class="text-secondary">Support the project with cryptocurrency</p>
         </div>
 
+        <div class="card mb-4">
+          <div class="card-body">
+            <p class="mb-2">
+              LeakIX is a cyber-security company that specializes in providing
+              businesses and researchers with comprehensive visibility into
+              internet-facing assets. The platform collects and analyses data on
+              IP addresses, domains and other network assets to help
+              organizations identify and mitigate security risks, including
+              exposed databases, misconfigured servers and vulnerable software.
+            </p>
+            <p class="mb-0 text-secondary">
+              We also support privacy-related projects and tools that protect
+              users online.
+            </p>
+          </div>
+        </div>
+
         <div class="d-flex flex-column gap-3">
           <div class="card">
             <div class="card-header d-flex align-items-center">
