Narrow content width to 600px

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="flex-grow-1 py-5">
-      <div class="container">
+      <div class="container" style="max-width: 600px">
         <div class="text-center mb-4">
           <h1 class="text-warning">Sponsor LeakIX</h1>
           <p class="text-secondary">Support the project with cryptocurrency</p>
