Add Stripe donation link
Closes #1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,28 @@
           </div>
         </div>
 
+        <div class="card mb-4">
+          <div class="card-header">
+            <span class="fw-semibold">Support Our Mission</span>
+          </div>
+          <div class="card-body">
+            <p class="mb-3">
+              Your support helps us maintain LeakIX as a free resource for the
+              security community, develop open-source tools, and fund
+              privacy-focused projects. Thank you for believing in our mission.
+            </p>
+            <a
+              href="https://donate.stripe.com/dRm3cufAbac9g4g3TIbsc0a"
+              class="btn btn-warning fw-semibold"
+            >
+              <i class="bi bi-credit-card me-2"></i>
+              Donate with Card
+            </a>
+          </div>
+        </div>
+
+        <h5 class="text-secondary mb-3">Or donate with cryptocurrency</h5>
+
         <div class="d-flex flex-column gap-3">
           <div class="card">
             <div class="card-header d-flex align-items-center">
