--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,10 +38,7 @@
         <div class="text-center mb-5">
           <h1 class="text-warning mb-4">Sponsor LeakIX</h1>
           <p class="mb-3">
-            Our mission is to make the internet safer and better. LeakIX is a
-            cyber-security company that provides businesses and researchers with
-            comprehensive visibility into internet-facing assets, helping
-            identify and mitigate security risks.
+            Our mission is to make the internet safer.
           </p>
           <p class="mb-3">
             We support privacy-related projects and tools that protect users
