Improve description with connected narrative

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,15 +38,14 @@
         <div class="text-center mb-5">
           <h1 class="text-warning mb-4">Sponsor LeakIX</h1>
           <p class="mb-3">
-            Our mission is to make the internet safer.
+            Our mission is to make the internet safer. LeakIX is a
+            cyber-security company that provides businesses and researchers
+            with comprehensive visibility into internet-facing assets, helping
+            identify and mitigate security risks.
           </p>
-          <p class="mb-3">
-            We support privacy-related projects and tools that protect users
-            online.
-          </p>
-          <p class="text-secondary mb-0">
-            Your support helps us maintain LeakIX as a free resource, develop
-            open-source tools, and fund privacy-focused projects.
+          <p class="mb-0">
+            We reinvest in the community by developing and supporting
+            privacy-related projects and tools that protect users online.
           </p>
         </div>
 
