--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,8 +40,11 @@
           <p class="mb-3">
             Our mission is to make the internet safer. LeakIX is a
             cyber-security company that provides businesses and researchers
-            with comprehensive visibility into internet-facing assets, helping
-            identify and mitigate security risks.
+            with comprehensive visibility into internet-facing assets. The
+            platform collects and analyses data on IP addresses, domains and
+            other network assets to help organizations identify and mitigate
+            security risks, including exposed databases, misconfigured servers
+            and vulnerable software.
           </p>
           <p class="mb-0">
             We reinvest in the community by developing and supporting
