Add USDT/USDC to Ethereum option

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
             </div>
             <div>
               <div class="d-flex align-items-center mb-2">
-                <span class="fw-semibold">Ethereum</span>
+                <span class="fw-semibold">Ethereum / USDT / USDC</span>
                 <button
                   class="btn btn-sm btn-outline-warning ms-auto"
                   data-copy
